--- a/package.json
+++ b/package.json
@@ -10,11 +10,8 @@
     "lint": "next lint",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
     "worker:build": "opennextjs-cloudflare",
-    "worker:dev": "wrangler dev --port 8771",
-    "worker:deploy": "yarn worker:build && wrangler deploy",
-    "pages:build": "npx @cloudflare/next-on-pages",
-    "pages:dev": "yarn run pages:build && wrangler pages dev",
-    "pages:deploy": "yarn run pages:build && wrangler pages deploy"
+    "worker:dev": "yarn worker:build && wrangler dev --port 3000",
+    "worker:deploy": "yarn worker:build && wrangler deploy"
   },
   "dependencies": {
     "@atproto/api": "^0.13.31",
@@ -53,7 +50,7 @@
     "iron-session": "^8.0.4",
     "lucide-react": "^0.468.0",
     "moment": "^2.30.1",
-    "next": "15.1.0",
+    "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
