update opennext to 0.5.10

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
     "worker:build": "opennextjs-cloudflare",
     "worker:dev": "yarn worker:build && wrangler dev --port 3000",
-    "worker:deploy": "yarn worker:build && wrangler deploy"
+    "worker:deploy": "yarn worker:build && wrangler deploy",
+    "prisma:gen": "prisma generate --schema=./prisma/schema.prisma"
   },
   "dependencies": {
     "@atproto/api": "^0.13.31",
@@ -27,7 +28,7 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.1.6",
-    "@opennextjs/cloudflare": "^0.4.4",
+    "@opennextjs/cloudflare": "^0.5.10",
     "@prisma/adapter-d1": "^6.3.0",
     "@prisma/client": "^6.3.0",
     "@radix-ui/react-avatar": "^1.1.2",
