--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "lint": "next lint",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
-    "worker:build": "opennextjs-cloudflare",
+    "worker:build": "opennextjs-cloudflare build",
     "worker:dev": "yarn worker:build && wrangler dev --port 3000",
     "worker:deploy": "yarn worker:build && wrangler deploy",
     "prisma:gen": "prisma generate --schema=./prisma/schema.prisma"
@@ -28,9 +28,9 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.1.6",
-    "@opennextjs/cloudflare": "^0.5.10",
-    "@prisma/adapter-d1": "^6.3.0",
-    "@prisma/client": "^6.3.0",
+    "@opennextjs/cloudflare": "^0.6.6",
+    "@prisma/adapter-d1": "^6.5.0",
+    "@prisma/client": "^6.5.0",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.3",
@@ -83,6 +83,6 @@
     "tsx": "^4.19.2",
     "typescript": "^5",
     "vercel": "^39.4.2",
-    "wrangler": "^3.106.0"
+    "wrangler": "^4.6.0"
   }
 }
